Migrate package: MYVOIPAPP.miniSIPServer.20C version 70.0.20260105
- Capitalize the package identifier

Signed-off-by: ❤是纱雾酱哟～ <49941141+Dragon1573@users.noreply.github.com>

--- a/manifests/m/MYVOIPAPP/miniSIPServer/20C/70.0.20260105/MYVOIPAPP.miniSIPServer.20C.yaml
+++ b/manifests/m/MYVOIPAPP/miniSIPServer/20C/70.0.20260105/MYVOIPAPP.miniSIPServer.20C.yaml
@@ -1,7 +1,7 @@
 # Created with komac v2.14.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.10.0.schema.json
 
-PackageIdentifier: myvoipapp.miniSIPServer.20C
+PackageIdentifier: MYVOIPAPP.miniSIPServer.20C
 PackageVersion: 70.0.20260105
 DefaultLocale: en-US
 ManifestType: version
