--- a/manifests/o/Obsidian/Obsidian/1.11.4/Obsidian.Obsidian.locale.en-US.yaml
+++ b/manifests/o/Obsidian/Obsidian/1.11.4/Obsidian.Obsidian.locale.en-US.yaml
@@ -33,8 +33,12 @@ Tags:
 - outliner
 - pkm
 - reference
-ReleaseNotes: https://obsidian.md/changelog/2026-01-12-desktop-v1.11.4/
-ReleaseNotesUrl: https://github.com/obsidianmd/obsidian-releases/releases/tag/v1.11.4
+ReleaseNotes: |-
+  No longer broken
+  - Fixed a bug where switching focus between the main window and a pop-out window could cause the wrong tab to become active.
+  Developers
+  - API: Exposed new SecretStorage and a complementary SecretComponent for plugins to integrate with the secret storage. The secret storage is a new opt-in way for plugins to save keys that might be shared across multiple plugins. For example, a Google API token, or an OpenAI key. Instead of requiring users to copy-paste the same keys into multiple plugin settings, plugins can now fetch keys from a shared collection of secrets identified by a user-provided name.
+ReleaseNotesUrl: https://obsidian.md/changelog/2026-01-07-desktop-v1.11.4/
 PurchaseUrl: https://obsidian.md/pricing
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
