--- a/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.locale.en-US.yaml
+++ b/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.locale.en-US.yaml
@@ -11,7 +11,7 @@ PackageName: Bandwidth Calculator
 PackageUrl: https://github.com/bryancandi/WinGet-Releases
 License: MIT
 LicenseUrl: https://github.com/bryancandi/WinGet-Releases/blob/main/LICENSE
-ShortDescription: Calculate download/upload time or speed.
+ShortDescription: A simple calculator to determine download times and bandwidth requirements.
 Tags:
 - bandwidth
 - calculator
@@ -22,3 +22,4 @@ Documentations:
   DocumentUrl: https://github.com/bryancandi/WinGet-Releases/wiki
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
