--- a/manifests/g/gnome/BansheeMediaPlayer/2.4.0/gnome.BansheeMediaPlayer.installer.yaml
+++ b/manifests/g/gnome/BansheeMediaPlayer/2.4.0/gnome.BansheeMediaPlayer.installer.yaml
@@ -6,6 +6,9 @@ ReleaseDate: 2012-03-20
 InstallerLocale: en-US
 InstallerType: wix
 ProductCode: '{5B613B0D-4197-4B57-BF22-7BD229FEB2F4}'
+Dependencies:
+  WindowsFeatures:
+    - netfx3 
 Installers:
 - Architecture: x86
   InstallerUrl: https://download.gnome.org/binaries/win32/banshee/Banshee-2.4.0.msi
