--- a/manifests/m/Microsoft/DirectX/Mesh/2025.10.28.1/Microsoft.DirectX.Mesh.installer.yaml
+++ b/manifests/m/Microsoft/DirectX/Mesh/2025.10.28.1/Microsoft.DirectX.Mesh.installer.yaml
@@ -14,6 +14,9 @@ Installers:
   InstallerSha256: 9c6674d8b3eb6bd3579fe08be8e26920ec8271dc3014728f0585b5cd9c79fd53
   Commands:
   - meshconvert_arm64
+  Dependencies:
+    PackageDependencies:
+    - PackageIdentifier: Microsoft.DotNet.Framework.DeveloperPack_4
 InstallerSuccessCodes:
 - 11
 - -1073741515
