--- a/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
+++ b/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
@@ -8,6 +8,7 @@ InstallerType: msi
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.9
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 ProductCode: '{296FFCF2-9F3C-4166-AE80-9C84B3A35193}'
 AppsAndFeaturesEntries:
 - DisplayName: BandwidthCalculator
@@ -21,5 +22,6 @@ Installers:
 ManifestType: installer
 ManifestVersion: 1.10.0
 ReleaseDate: 2026-01-13
+
 
 
