Update Visual Studio Enterprise Insiders installer manifest

--- a/manifests/m/Microsoft/VisualStudio/Enterprise/Insiders/18.3.11408.92/Microsoft.VisualStudio.Enterprise.Insiders.installer.yaml
+++ b/manifests/m/Microsoft/VisualStudio/Enterprise/Insiders/18.3.11408.92/Microsoft.VisualStudio.Enterprise.Insiders.installer.yaml
@@ -83,6 +83,8 @@ ExpectedReturnCodes:
   ReturnResponseUrl: https://learn.microsoft.com/en-us/troubleshoot/developer/visualstudio/installation/issues-workarounds-visual-studio-setup
 Commands:
 - devenv
+AppsAndFeaturesEntries:
+- DisplayVersion: Insiders [11408.92]
 Installers:
 - Architecture: x64
   InstallerType: exe
@@ -91,3 +93,4 @@ Installers:
   InstallerSha256: 41d6b19e8cbe53af8ac83454d83cd239dc1ffbb44e3f687a1bbfdea296c556d9
 ManifestType: installer
 ManifestVersion: 1.9.0
+
