--- a/manifests/m/Microsoft/VisualStudio/Professional/Insiders/18.3.11408.92/Microsoft.VisualStudio.Professional.Insiders.installer.yaml
+++ b/manifests/m/Microsoft/VisualStudio/Professional/Insiders/18.3.11408.92/Microsoft.VisualStudio.Professional.Insiders.installer.yaml
@@ -83,6 +83,8 @@ ExpectedReturnCodes:
   ReturnResponseUrl: https://learn.microsoft.com/en-us/troubleshoot/developer/visualstudio/installation/issues-workarounds-visual-studio-setup
 Commands:
 - devenv
+AppsAndFeaturesEntries:
+- DisplayVersion: Insiders [11408.92]
 Installers:
 - Architecture: x64
   InstallerType: exe
@@ -91,3 +93,4 @@ Installers:
   InstallerSha256: a1b37e1366419830d35246577e3088eb8f89377bc862e19f06d038ec97d09e75
 ManifestType: installer
 ManifestVersion: 1.9.0
+
