Update Visual Studio Community Insiders installer manifest

--- a/manifests/m/Microsoft/VisualStudio/Community/Insiders/18.3.11408.92/Microsoft.VisualStudio.Community.Insiders.installer.yaml
+++ b/manifests/m/Microsoft/VisualStudio/Community/Insiders/18.3.11408.92/Microsoft.VisualStudio.Community.Insiders.installer.yaml
@@ -83,6 +83,8 @@ ExpectedReturnCodes:
   ReturnResponseUrl: https://learn.microsoft.com/en-us/troubleshoot/developer/visualstudio/installation/issues-workarounds-visual-studio-setup
 Commands:
 - devenv
+AppsAndFeaturesEntries:
+- DisplayVersion: Insiders [11408.92]
 Installers:
 - Architecture: x64
   InstallerType: exe
@@ -91,3 +93,4 @@ Installers:
   InstallerSha256: 6e7c7bd8d7445e22c706c5f1be0591d57b33531672ca68378381ef397598c12d
 ManifestType: installer
 ManifestVersion: 1.9.0
+
