--- a/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
+++ b/manifests/b/BryanCandi/BandwidthCalculator/1.2.0/BryanCandi.BandwidthCalculator.installer.yaml
@@ -8,7 +8,7 @@ InstallerType: msi
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.9
-  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
+    MinimumVersion: 9.0.1
 ProductCode: '{296FFCF2-9F3C-4166-AE80-9C84B3A35193}'
 AppsAndFeaturesEntries:
 - DisplayName: BandwidthCalculator
@@ -16,12 +16,12 @@ AppsAndFeaturesEntries:
   ProductCode: '{296FFCF2-9F3C-4166-AE80-9C84B3A35193}'
   UpgradeCode: '{1ABD1CC7-8220-4209-A4D4-52DBF89E91CF}'
 Installers:
+- Architecture: x86
+  InstallerUrl: https://github.com/bryancandi/WinGet-Releases/releases/download/BandwidthCalculator-1.2.0/BandwidthCalculatorInstaller.msi
+  InstallerSha256: F0472D7CC928F046287ED3F402145D48DE837A78CE5C6EBE61CE7A8020387715
 - Architecture: x64
   InstallerUrl: https://github.com/bryancandi/WinGet-Releases/releases/download/BandwidthCalculator-1.2.0/BandwidthCalculatorInstaller.msi
   InstallerSha256: F0472D7CC928F046287ED3F402145D48DE837A78CE5C6EBE61CE7A8020387715
 ManifestType: installer
 ManifestVersion: 1.10.0
 ReleaseDate: 2026-01-13
-
-
-
