New version: KDE.Haruna version 1.7.0 (1580) (#327726)

--- a/manifests/k/KDE/Haruna/1.7.0/KDE.Haruna.locale.en-US.yaml
+++ b/manifests/k/KDE/Haruna/1.7.0/KDE.Haruna.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: KDE.Haruna
-PackageVersion: 1.6.0
+PackageVersion: 1.7.0
 PackageLocale: en-US
 Publisher: KDE e.V.
 PublisherUrl: https://kde.org/
@@ -13,7 +13,7 @@ PackageName: Haruna
 PackageUrl: https://haruna.kde.org/
 License: GPL-3.0-or-later
 LicenseUrl: https://invent.kde.org/multimedia/haruna/-/blob/HEAD/LICENSES/GPL-3.0-or-later.txt
-Copyright: (c) 2019-2025
+Copyright: (c) 2019-2026
 ShortDescription: Media Player
 Description: |-
   Open source media player built with Qt/QML and libmpv.
@@ -34,19 +34,19 @@ Tags:
 - video
 ReleaseNotes: |-
   Features
-  - Added option to resize playlist
-  - Moved the action to add a new playlist/tab to the tabbar
-  - Moved the action to open a playlist in the "Add" menu
-  - Added an icon for playback action in playlist header
-  - Mouse settings: action asssigned to a mouse event can be changed
+  PlayList
+  - added advanced sorting and grouping
+  - added context menu to open file in Hana (thumbnail generator, only if it's installed)
+  - the last active playlist will be set as visible when starting the app
+  Other
+  - added replay gain settings
+  - mpris thumbnail is only set for audio files, this allows the os taskbar preview to show the actual live window
+  - decreased the size of the play icon in the compact playlist
   Bugfixes
-  - Fixed looping playlist with a single files
-  - Fixed playlist tabs not being saved
-  - Fixed renaming playlists right after adding them
-  - Fixed next/previous buttons being disabled while adding items via dropping in "Add to Playlist" drop area
-  - Fixed play previous action not wrapping from first item in playlist to the last item
-  - Fixed not being able to add new playlist tab when yt-dlp is not installed
-  - Added a workaround for file dialogs not receiving key events; escape and arrow key were not working
+  - fixed database folder not being created
+  - fixed seekbar tooltip not updating when file changes and the mouse is not moved
+  - fixed deleting custom commands
+  - fixed saving last opened url
 ReleaseNotesUrl: https://haruna.kde.org/blog/
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
