On the home stretch now.

--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.en-US.yaml
@@ -6,14 +6,14 @@ PackageLocale: en-US
 Publisher: Microsoft Corporation
 PublisherUrl: https://dotnet.microsoft.com/
 PublisherSupportUrl: https://dotnet.microsoft.com/platform/support
-PackageName: Microsoft .NET Framework Runtime
+PackageName: Microsoft .NET Framework Runtime (ARM64)
 License: Proprietary (Freeware)
 Copyright: © Microsoft Corporation. All rights reserved.
 ShortDescription: Do you want to run apps? The runtime includes everything you need to run existing apps/programs built with .NET Framework. Not necessarily to be confused with «Microsoft .NET Runtime».
 Description: |-
   Do you want to run apps? The runtime includes everything you need to run existing apps/programs built with .NET Framework. Not necessarily to be confused with «Microsoft .NET Runtime».
 
-  Normally the runtime is installed by default with all x64 versions of Windows 11. This package is thus primarily intended for ARM64 versions, people on Windows 10, and people who have had their default runtime installations be corrupted in some way.
+  Normally the runtime is installed by default with all x64 versions of Windows 11, and with x64 and x86 versions of Windows 10 22H2, which as of January 14, 2026 causes complications with the Winget verification process. Due to that, this package can by default only be installed on ARM64 devices, and users of x64/x86 versions of Windows 10 ≤21H2 cannot use this package even if they are still on Framework 4.8.0.
 Tags:
 - .net
 - dotnet
@@ -28,6 +28,7 @@ Tags:
 - wminet_utils.dll
 - ndp481
 - kb5011048
+- arm64-devices
 PrivacyUrl: https://www.microsoft.com/privacy/privacystatement
 PackageUrl: https://dotnet.microsoft.com/en-us/download/dotnet-framework/net481
 LicenseUrl: https://www.microsoft.com/en-us/legal/terms-of-use
