--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.es-ES.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.es-ES.yaml
@@ -6,13 +6,10 @@ PackageLocale: es-ES
 Publisher: Microsoft Corporation
 PublisherUrl: https://dotnet.microsoft.com/
 PublisherSupportUrl: https://dotnet.microsoft.com/platform/support
-PackageName: Microsoft .NET entorno de ejecución
+PackageName: Microsoft .NET entorno de ejecución (ARM64)
 License: Proprietary (Freeware)
 Copyright: © Microsoft Corporation. All rights reserved.
 ShortDescription: ¿Quiere ejecutar aplicaciones? El entorno de ejecución incluye todo lo que necesita para ejecutar aplicaciones o programas existentes compilados con .NET Framework. No debe confundirse necesariamente con «Entorno de ejecución de .NET».
-Description: |-
-  ¿Quiere ejecutar aplicaciones? El entorno de ejecución incluye todo lo que necesita para ejecutar aplicaciones o programas existentes compilados con .NET Framework. No debe confundirse necesariamente con «Entorno de ejecución de .NET».
-  Normalmente, el tiempo de ejecución se instala de forma predeterminada con todas las versiones de Windows 11. Por lo tanto, este paquete está destinado principalmente a personas que utilizan Windows 10 o que han sufrido algún tipo de daño en sus instalaciones predeterminadas del entorno de ejecución.
 Tags:
 - .net
 - dotnet
