--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.es-ES.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.locale.es-ES.yaml
@@ -8,7 +8,7 @@ PublisherUrl: https://dotnet.microsoft.com/
 PublisherSupportUrl: https://dotnet.microsoft.com/platform/support
 PackageName: Microsoft .NET entorno de ejecución (ARM64)
 License: Proprietary (Freeware)
-Copyright: © Microsoft Corporation. All rights reserved.
+Copyright: © Microsoft Corporation. Todos los derechos reservados.
 ShortDescription: ¿Quiere ejecutar aplicaciones? El entorno de ejecución incluye todo lo que necesita para ejecutar aplicaciones o programas existentes compilados con .NET Framework. No debe confundirse necesariamente con «Entorno de ejecución de .NET».
 Tags:
 - .net
