--- a/manifests/m/Microsoft/PhyloD/2.0.0-alpha/Microsoft.PhyloD.installer.yaml
+++ b/manifests/m/Microsoft/PhyloD/2.0.0-alpha/Microsoft.PhyloD.installer.yaml
@@ -6,9 +6,9 @@ ReleaseDate: 2016-05-16
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: Release/Distribute.exe
+- RelativeFilePath: Release\Distribute.exe
   PortableCommandAlias: phylodistribute
-- RelativeFilePath: Release/PhyloShell.exe
+- RelativeFilePath: Release\PhyloShell.exe
   PortableCommandAlias: phyloshell
 ArchiveBinariesDependOnPath: true
 Installers:
