--- a/manifests/n/NUnit/NUnit/4.4.0/NUnit.NUnit.installer.yaml
+++ b/manifests/n/NUnit/NUnit/4.4.0/NUnit.NUnit.installer.yaml
@@ -11,16 +11,16 @@ Installers:
   InstallerSha256: 6172949E6D3E5F5EAFB7D06A603C7132145BFA852669E579E4FCB6248D75736F
   NestedInstallerFiles:
   - RelativeFilePath: bin\net8.0\nunitlite-runner.exe
-    PortableCommandAlias: nunit
+    PortableCommandAlias: nunitlite-runner
   - RelativeFilePath: bin\net6.0\nunitlite-runner.exe
-    PortableCommandAlias: nunitnet6
+    PortableCommandAlias: nunitlite-runner6
   - RelativeFilePath: bin\net462\nunitlite-runner.exe
-    PortableCommandAlias: nunitnet4
+    PortableCommandAlias: nunitlite-runner4
 - Architecture: x86
   InstallerUrl: https://github.com/nunit/nunit/releases/download/4.4.0/NUnit.Framework-4.4.0.zip
   InstallerSha256: 6172949E6D3E5F5EAFB7D06A603C7132145BFA852669E579E4FCB6248D75736F
   NestedInstallerFiles:
   - RelativeFilePath: bin\net462\nunitlite-runner.exe
-    PortableCommandAlias: nunitnet4
+    PortableCommandAlias: nunitlite-runner4
 ManifestType: installer
 ManifestVersion: 1.12.0
