--- a/manifests/s/SubSeeker/SubSeeker/3.1.0/SubSeeker.SubSeeker.yaml
+++ b/manifests/s/SubSeeker/SubSeeker/3.1.0/SubSeeker.SubSeeker.yaml
@@ -1,5 +1,5 @@
 PackageIdentifier: SubSeeker.SubSeeker
 PackageVersion: 3.1.0
-DefaultLocale: en-US
+DefaultLocale: es-ES
 ManifestType: version
 ManifestVersion: 1.6.0
