--- a/manifests/o/Obiddable/Obiddable/1.0.0/Obiddable.Obiddable.installer.yaml
+++ b/manifests/o/Obiddable/Obiddable/1.0.0/Obiddable.Obiddable.installer.yaml
@@ -5,6 +5,9 @@ PackageIdentifier: Obiddable.Obiddable
 PackageVersion: 1.0.0
 InstallerType: wix
 ProductCode: '{7F6BE12B-A852-4E8B-9CA6-56071464E32D}'
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.10
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/Obiddable/Obiddable/releases/download/v1.0.0/Obiddable-v1.0.0-win-x64.msi
